macro_compiler/parser.output
State 11 conflicts: 1 shift/reduce, 1 reduce/reduce
State 49 conflicts: 10 shift/reduce
State 88 conflicts: 23 shift/reduce
State 98 conflicts: 1 reduce/reduce
State 103 conflicts: 45 reduce/reduce
State 110 conflicts: 22 shift/reduce
State 160 conflicts: 6 shift/reduce
State 163 conflicts: 1 shift/reduce
State 179 conflicts: 1 reduce/reduce
State 194 conflicts: 22 shift/reduce
State 219 conflicts: 1 reduce/reduce
State 235 conflicts: 1 shift/reduce
State 254 conflicts: 1 shift/reduce
State 263 conflicts: 1 shift/reduce
State 291 conflicts: 16 shift/reduce, 1 reduce/reduce
State 302 conflicts: 1 shift/reduce


Grammar

    0 $accept: file_structure $end

    1 $@1: %empty

    2 $@2: %empty

    3 file_structure: $@1 namespace prerequisites global_declarations $@2 header_delimiter macro_definitions

    4 header_delimiter: %empty
    5                 | '!'

    6 macro_definitions: %empty
    7                  | macro_definition macro_definitions

    8 namespace: %empty
    9          | T_NAMESPACE T_IDENT ';'

   10 prerequisites: %empty
   11              | prerequisites require

   12 require: T_REQUIRE T_STRING ';'

   13 global_declarations: %empty
   14                    | global_declarations constants ';'
   15                    | global_declarations global_var ';'

   16 scope: %empty
   17      | T_STATIC

   18 constants: T_CONST constant_list

   19 constant_list: constdef
   20              | constant_list ',' constdef

   21 $@3: %empty

   22 $@4: %empty

   23 constdef: $@3 variable_identifier T_ASSIGN constant_literal $@4

   24 constant_literal: simple_literal
   25                 | T_STRING

   26 variable_identifier: T_IDENT
   27                    | T_NUM
   28                    | T_STRING

   29 variable_reference: T_VARIABLE
   30                   | T_IDENT

   31 macro_declaration: T_IDENT
   32                  | T_FUNC

   33 macro_type: scope T_VOID
   34           | scope type_name

   35 macrostart: macro_type macro_declaration '(' parameter_list ')' optional_description

   36 global_var: scope var_decl

   37 var_decl: type_name variable_identifier assignment_expression
   38         | type_name variable_identifier

   39 optional_description: %empty
   40                     | T_STRING

   41 parameter_list: %empty
   42               | non_empty_pardecl

   43 non_empty_pardecl: par_decl
   44                  | non_empty_pardecl ',' par_decl

   45 par_decl: type_name variable_identifier

   46 $@5: %empty

   47 macro_definition: $@5 macrostart block

   48 block: '{' var_decls stmntlist closing_brace

   49 var_decls: %empty
   50          | var_decls var_decl ';'

   51 statement: ';'
   52          | call_expression ';'
   53          | assignment ';'
   54          | if_expression
   55          | while
   56          | foreach
   57          | switch_expression
   58          | break
   59          | continue
   60          | return_expression
   61          | goto
   62          | block
   63          | increment_expression
   64          | label
   65          | var_decl
   66          | error ';'

   67 assignment: variable_reference assignment_expression
   68           | variable_reference '[' value ']' assignment_expression

   69 $@6: %empty

   70 assignment: variable_reference $@6 shorthand_assignment_operator simple_expression

   71 shorthand_assignment_operator: T_SH_ASSIGN_MULT
   72                              | T_SH_ASSIGN_DIV
   73                              | T_SH_ASSIGN_MOD
   74                              | T_SH_ASSIGN_PLUS
   75                              | T_SH_ASSIGN_MINUS

   76 assignment_expression: T_ASSIGN simple_expression

   77 simple_expression: binary_expression
   78                  | range_expression

   79 binary_expression_or_range: binary_expression
   80                           | range_expression

   81 range_expression: %empty

   82 $@7: %empty

   83 range_expression: binary_expression T_DOTDOT binary_expression $@7 range_increment

   84 range_increment: %empty
   85                | T_DOTDOT binary_expression

   86 increment_expression: variable_reference T_MINUSMINUS
   87                     | variable_reference T_PLUSPLUS

   88 s_bterm: value
   89        | call_expression

   90 binary_expression: s_bterm
   91                  | type_cast s_bterm
   92                  | '-' T_NUM
   93                  | binary_expression '[' binary_expression_or_range ']'
   94                  | '!' binary_expression
   95                  | '~' binary_expression
   96                  | '+' binary_expression
   97                  | '-' binary_expression
   98                  | binary_expression '~' binary_expression
   99                  | binary_expression T_NMATCH binary_expression
  100                  | binary_expression '&' binary_expression
  101                  | binary_expression '|' binary_expression
  102                  | binary_expression '+' binary_expression
  103                  | binary_expression '^' binary_expression
  104                  | binary_expression '-' binary_expression
  105                  | binary_expression '*' binary_expression
  106                  | binary_expression '/' binary_expression
  107                  | binary_expression '%' binary_expression
  108                  | binary_expression T_SHIFT_LEFT binary_expression
  109                  | binary_expression T_SHIFT_RIGHT binary_expression
  110                  | binary_expression T_POWER_TO binary_expression
  111                  | binary_expression T_AND binary_expression
  112                  | binary_expression T_OR binary_expression
  113                  | binary_expression '<' binary_expression
  114                  | binary_expression '>' binary_expression
  115                  | binary_expression T_LE binary_expression
  116                  | binary_expression T_GE binary_expression
  117                  | binary_expression T_EQ binary_expression
  118                  | binary_expression T_NE binary_expression
  119                  | '(' binary_expression ')'
  120                  | variable_reference assignment_expression

  121 condition: '(' binary_expression ')'
  122          | '(' binary_expression

  123 value: T_VARIABLE
  124      | string
  125      | simple_literal
  126      | map_literal
  127      | array_literal
  128      | T_IDENT

  129 $@8: %empty

  130 map_literal: '{' $@8 map_associates closing_brace

  131 map_associates: map_associate
  132               | map_associates ',' map_associate

  133 map_associate: T_STRING T_ASSOC_ARROW simple_literal
  134              | T_STRING T_ASSOC_ARROW T_STRING

  135 $@9: %empty

  136 array_literal: '[' $@9 ']'

  137 $@10: %empty

  138 array_literal: '[' $@10 array_elements ']'

  139 array_elements: array_elements ',' array_element
  140               | array_element

  141 array_element: simple_array_element
  142              | T_STRING

  143 simple_array_element: T_NUM
  144                     | T_CHARACTER
  145                     | T_TRUE
  146                     | T_FALSE

  147 string: T_STRING
  148       | string T_STRING

  149 break: T_BREAK opt_num ';'

  150 continue: T_CONTINUE opt_num ';'

  151 return_expression: T_RETURN optional_bterm

  152 optional_bterm: %empty
  153               | binary_expression

  154 opt_num: %empty
  155        | T_NUM

  156 case_clauses: %empty
  157             | case_clause case_clauses

  158 case_clause: case_selector stmntlist

  159 case_selector: T_CASE case_condition ':'
  160              | T_DEFAULT ':'

  161 case_condition: T_NUM
  162               | T_STRING
  163               | T_NUM T_DOTDOT T_NUM

  164 label: T_IDENT ':'

  165 goto: T_GOTO T_IDENT

  166 $@11: %empty

  167 in_clause: '(' type_name variable_identifier $@11 ':' simple_expression ')'

  168 $@12: %empty

  169 switch_expression: T_SWITCH '(' value ')' $@12 '{' case_clauses '}'

  170 $@13: %empty

  171 $@14: %empty

  172 foreach: T_FOR $@13 in_clause $@14 local_block

  173 $@15: %empty

  174 $@16: %empty

  175 while: T_WHILE $@15 condition $@16 local_block

  176 local_block: statement
  177            | '{' stmntlist closing_brace

  178 closing_brace: '}'

  179 $@17: %empty

  180 $@18: %empty

  181 if_expression: T_IF condition $@17 local_block $@18 else_clause

  182 else_clause: %empty

  183 $@19: %empty

  184 else_clause: T_ELSE $@19 local_block

  185 stmntlist: %empty

  186 $@20: %empty

  187 stmntlist: statement $@20 stmntlist

  188 closing_paren: ')'

  189 @21: %empty

  190 call_expression: T_FUNC '(' @21 parameter_list closing_paren

  191 @22: %empty

  192 call_expression: function_id_or_pointer '(' @22 parameter_list closing_paren

  193 function_id_or_pointer: '*' variable_reference
  194                       | T_IDENT
  195                       | error

  196 parameter_list: nonempty_parameters

  197 nonempty_parameters: parameter
  198                    | nonempty_parameters ',' parameter
  199                    | error

  200 parameter: simple_expression

  201 type_cast: '(' type_name ')'

  202 type_name: T_TYPE_IDENTIFIER
  203          | T_TYPE_IDENTIFIER array_dimension

  204 array_dimension: '[' ']'
  205                | '[' T_NUM ']'

  206 boolean_literal: T_TRUE
  207                | T_FALSE

  208 float_literal: T_FLOATING_POINT_NUMBER

  209 integer_literal: T_NUM

  210 character_literal: T_CHARACTER

  211 simple_literal: integer_literal
  212               | float_literal
  213               | character_literal
  214               | boolean_literal


Terminals, with rules where they appear

    $end (0) 0
    '!' (33) 5 94
    '%' (37) 107
    '&' (38) 100
    '(' (40) 35 119 121 122 167 169 190 192 201
    ')' (41) 35 119 121 167 169 188 201
    '*' (42) 105 193
    '+' (43) 96 102
    ',' (44) 20 44 132 139 198
    '-' (45) 92 97 104
    '/' (47) 106
    ':' (58) 159 160 164 167
    ';' (59) 9 12 14 15 50 51 52 53 66 149 150
    '<' (60) 113
    '>' (62) 114
    '[' (91) 68 93 136 138 204 205
    ']' (93) 68 93 136 138 204 205
    '^' (94) 103
    '{' (123) 48 130 169 177
    '|' (124) 101
    '}' (125) 169 178
    '~' (126) 95 98
    error (256) 66 195 199
    T_NAMESPACE (258) 9
    T_REQUIRE (259) 12
    T_FOR (260) 172
    T_STATIC (261) 17
    T_VOID (262) 33
    T_TYPE_IDENTIFIER (263) 202 203
    T_IDENT (264) 9 26 30 31 128 164 165 194
    T_NUM (265) 27 92 143 155 161 163 205 209
    T_FLOATING_POINT_NUMBER (266) 208
    T_STRING (267) 12 25 28 40 133 134 142 147 148 162
    T_CHARACTER (268) 144 210
    T_CONST (269) 18
    T_TRUE (270) 145 206
    T_FALSE (271) 146 207
    T_FUNC (272) 32 190
    T_DOTDOT (273) 83 85 163
    T_PLUSPLUS (274) 87
    T_MINUSMINUS (275) 86
    T_IF (276) 181
    T_ELSE (277) 184
    T_WHILE (278) 175
    T_GOTO (279) 165
    T_SH_ASSIGN_PLUS (280) 74
    T_SH_ASSIGN_MINUS (281) 75
    T_SH_ASSIGN_MULT (282) 71
    T_SH_ASSIGN_DIV (283) 72
    T_SH_ASSIGN_MOD (284) 73
    T_SWITCH (285) 169
    T_CASE (286) 159
    T_DEFAULT (287) 160
    T_BREAK (288) 149
    T_CONTINUE (289) 150
    T_RETURN (290) 151
    T_VARIABLE (291) 29 123
    T_ASSOC_ARROW (292) 133 134
    T_NMATCH (293) 99
    T_ASSIGN (294) 23 76
    T_NE (295) 118
    T_EQ (296) 117
    T_SHIFT_LEFT (297) 108
    T_SHIFT_RIGHT (298) 109
    T_OR (299) 112
    T_AND (300) 111
    T_LE (301) 115
    T_GE (302) 116
    T_POWER_TO (303) 110


Nonterminals, with rules where they appear

    $accept (70)
        on left: 0
    file_structure (71)
        on left: 3
        on right: 0
    $@1 (72)
        on left: 1
        on right: 3
    $@2 (73)
        on left: 2
        on right: 3
    header_delimiter (74)
        on left: 4 5
        on right: 3
    macro_definitions (75)
        on left: 6 7
        on right: 3 7
    namespace (76)
        on left: 8 9
        on right: 3
    prerequisites (77)
        on left: 10 11
        on right: 3 11
    require (78)
        on left: 12
        on right: 11
    global_declarations (79)
        on left: 13 14 15
        on right: 3 14 15
    scope (80)
        on left: 16 17
        on right: 33 34 36
    constants (81)
        on left: 18
        on right: 14
    constant_list (82)
        on left: 19 20
        on right: 18 20
    constdef (83)
        on left: 23
        on right: 19 20
    $@3 (84)
        on left: 21
        on right: 23
    $@4 (85)
        on left: 22
        on right: 23
    constant_literal (86)
        on left: 24 25
        on right: 23
    variable_identifier (87)
        on left: 26 27 28
        on right: 23 37 38 45 167
    variable_reference (88)
        on left: 29 30
        on right: 67 68 70 86 87 120 193
    macro_declaration (89)
        on left: 31 32
        on right: 35
    macro_type (90)
        on left: 33 34
        on right: 35
    macrostart (91)
        on left: 35
        on right: 47
    global_var (92)
        on left: 36
        on right: 15
    var_decl (93)
        on left: 37 38
        on right: 36 50 65
    optional_description (94)
        on left: 39 40
        on right: 35
    parameter_list (95)
        on left: 41 42 196
        on right: 35 190 192
    non_empty_pardecl (96)
        on left: 43 44
        on right: 42 44
    par_decl (97)
        on left: 45
        on right: 43 44
    macro_definition (98)
        on left: 47
        on right: 7
    $@5 (99)
        on left: 46
        on right: 47
    block (100)
        on left: 48
        on right: 47 62
    var_decls (101)
        on left: 49 50
        on right: 48 50
    statement (102)
        on left: 51 52 53 54 55 56 57 58 59 60 61 62 63 64 65 66
        on right: 176 187
    assignment (103)
        on left: 67 68 70
        on right: 53
    $@6 (104)
        on left: 69
        on right: 70
    shorthand_assignment_operator (105)
        on left: 71 72 73 74 75
        on right: 70
    assignment_expression (106)
        on left: 76
        on right: 37 67 68 120
    simple_expression (107)
        on left: 77 78
        on right: 70 76 167 200
    binary_expression_or_range (108)
        on left: 79 80
        on right: 93
    range_expression (109)
        on left: 81 83
        on right: 78 80
    $@7 (110)
        on left: 82
        on right: 83
    range_increment (111)
        on left: 84 85
        on right: 83
    increment_expression (112)
        on left: 86 87
        on right: 63
    s_bterm (113)
        on left: 88 89
        on right: 90 91
    binary_expression (114)
        on left: 90 91 92 93 94 95 96 97 98 99 100 101 102 103 104 105 106 107 108 109 110 111 112 113 114 115 116 117 118 119 120
        on right: 77 79 83 85 93 94 95 96 97 98 99 100 101 102 103 104 105 106 107 108 109 110 111 112 113 114 115 116 117 118 119 121 122 153
    condition (115)
        on left: 121 122
        on right: 175 181
    value (116)
        on left: 123 124 125 126 127 128
        on right: 68 88 169
    map_literal (117)
        on left: 130
        on right: 126
    $@8 (118)
        on left: 129
        on right: 130
    map_associates (119)
        on left: 131 132
        on right: 130 132
    map_associate (120)
        on left: 133 134
        on right: 131 132
    array_literal (121)
        on left: 136 138
        on right: 127
    $@9 (122)
        on left: 135
        on right: 136
    $@10 (123)
        on left: 137
        on right: 138
    array_elements (124)
        on left: 139 140
        on right: 138 139
    array_element (125)
        on left: 141 142
        on right: 139 140
    simple_array_element (126)
        on left: 143 144 145 146
        on right: 141
    string (127)
        on left: 147 148
        on right: 124 148
    break (128)
        on left: 149
        on right: 58
    continue (129)
        on left: 150
        on right: 59
    return_expression (130)
        on left: 151
        on right: 60
    optional_bterm (131)
        on left: 152 153
        on right: 151
    opt_num (132)
        on left: 154 155
        on right: 149 150
    case_clauses (133)
        on left: 156 157
        on right: 157 169
    case_clause (134)
        on left: 158
        on right: 157
    case_selector (135)
        on left: 159 160
        on right: 158
    case_condition (136)
        on left: 161 162 163
        on right: 159
    label (137)
        on left: 164
        on right: 64
    goto (138)
        on left: 165
        on right: 61
    in_clause (139)
        on left: 167
        on right: 172
    $@11 (140)
        on left: 166
        on right: 167
    switch_expression (141)
        on left: 169
        on right: 57
    $@12 (142)
        on left: 168
        on right: 169
    foreach (143)
        on left: 172
        on right: 56
    $@13 (144)
        on left: 170
        on right: 172
    $@14 (145)
        on left: 171
        on right: 172
    while (146)
        on left: 175
        on right: 55
    $@15 (147)
        on left: 173
        on right: 175
    $@16 (148)
        on left: 174
        on right: 175
    local_block (149)
        on left: 176 177
        on right: 172 175 181 184
    closing_brace (150)
        on left: 178
        on right: 48 130 177
    if_expression (151)
        on left: 181
        on right: 54
    $@17 (152)
        on left: 179
        on right: 181
    $@18 (153)
        on left: 180
        on right: 181
    else_clause (154)
        on left: 182 184
        on right: 181
    $@19 (155)
        on left: 183
        on right: 184
    stmntlist (156)
        on left: 185 187
        on right: 48 158 177 187
    $@20 (157)
        on left: 186
        on right: 187
    closing_paren (158)
        on left: 188
        on right: 190 192
    call_expression (159)
        on left: 190 192
        on right: 52 89
    @21 (160)
        on left: 189
        on right: 190
    @22 (161)
        on left: 191
        on right: 192
    function_id_or_pointer (162)
        on left: 193 194 195
        on right: 192
    nonempty_parameters (163)
        on left: 197 198 199
        on right: 196 198
    parameter (164)
        on left: 200
        on right: 197 198
    type_cast (165)
        on left: 201
        on right: 91
    type_name (166)
        on left: 202 203
        on right: 34 37 38 45 167 201
    array_dimension (167)
        on left: 204 205
        on right: 203
    boolean_literal (168)
        on left: 206 207
        on right: 214
    float_literal (169)
        on left: 208
        on right: 212
    integer_literal (170)
        on left: 209
        on right: 211
    character_literal (171)
        on left: 210
        on right: 213
    simple_literal (172)
        on left: 211 212 213 214
        on right: 24 125 133


State 0

    0 $accept: . file_structure $end

    $default  reduce using rule 1 ($@1)

    file_structure  go to state 1
    $@1             go to state 2


State 1

    0 $accept: file_structure . $end

    $end  shift, and go to state 3


State 2

    3 file_structure: $@1 . namespace prerequisites global_declarations $@2 header_delimiter macro_definitions

    T_NAMESPACE  shift, and go to state 4

    $default  reduce using rule 8 (namespace)

    namespace  go to state 5


State 3

    0 $accept: file_structure $end .

    $default  accept


State 4

    9 namespace: T_NAMESPACE . T_IDENT ';'

    T_IDENT  shift, and go to state 6


State 5

    3 file_structure: $@1 namespace . prerequisites global_declarations $@2 header_delimiter macro_definitions

    $default  reduce using rule 10 (prerequisites)

    prerequisites  go to state 7


State 6

    9 namespace: T_NAMESPACE T_IDENT . ';'

    ';'  shift, and go to state 8


State 7

    3 file_structure: $@1 namespace prerequisites . global_declarations $@2 header_delimiter macro_definitions
   11 prerequisites: prerequisites . require

    T_REQUIRE  shift, and go to state 9

    $default  reduce using rule 13 (global_declarations)

    require              go to state 10
    global_declarations  go to state 11


State 8

    9 namespace: T_NAMESPACE T_IDENT ';' .

    $default  reduce using rule 9 (namespace)


State 9

   12 require: T_REQUIRE . T_STRING ';'

    T_STRING  shift, and go to state 12


State 10

   11 prerequisites: prerequisites require .

    $default  reduce using rule 11 (prerequisites)


State 11

    3 file_structure: $@1 namespace prerequisites global_declarations . $@2 header_delimiter macro_definitions
   14 global_declarations: global_declarations . constants ';'
   15                    | global_declarations . global_var ';'

    T_STATIC  shift, and go to state 13
    T_CONST   shift, and go to state 14

    T_STATIC           [reduce using rule 2 ($@2)]
    T_TYPE_IDENTIFIER  reduce using rule 2 ($@2)
    T_TYPE_IDENTIFIER  [reduce using rule 16 (scope)]
    $default           reduce using rule 2 ($@2)

    $@2         go to state 15
    scope       go to state 16
    constants   go to state 17
    global_var  go to state 18


State 12

   12 require: T_REQUIRE T_STRING . ';'

    ';'  shift, and go to state 19


State 13

   17 scope: T_STATIC .

    $default  reduce using rule 17 (scope)


State 14

   18 constants: T_CONST . constant_list

    $default  reduce using rule 21 ($@3)

    constant_list  go to state 20
    constdef       go to state 21
    $@3            go to state 22


State 15

    3 file_structure: $@1 namespace prerequisites global_declarations $@2 . header_delimiter macro_definitions

    '!'  shift, and go to state 23

    $default  reduce using rule 4 (header_delimiter)

    header_delimiter  go to state 24


State 16

   36 global_var: scope . var_decl

    T_TYPE_IDENTIFIER  shift, and go to state 25

    var_decl   go to state 26
    type_name  go to state 27


State 17

   14 global_declarations: global_declarations constants . ';'

    ';'  shift, and go to state 28


State 18

   15 global_declarations: global_declarations global_var . ';'

    ';'  shift, and go to state 29


State 19

   12 require: T_REQUIRE T_STRING ';' .

    $default  reduce using rule 12 (require)


State 20

   18 constants: T_CONST constant_list .
   20 constant_list: constant_list . ',' constdef

    ','  shift, and go to state 30

    $default  reduce using rule 18 (constants)


State 21

   19 constant_list: constdef .

    $default  reduce using rule 19 (constant_list)


State 22

   23 constdef: $@3 . variable_identifier T_ASSIGN constant_literal $@4

    T_IDENT   shift, and go to state 31
    T_NUM     shift, and go to state 32
    T_STRING  shift, and go to state 33

    variable_identifier  go to state 34


State 23

    5 header_delimiter: '!' .

    $default  reduce using rule 5 (header_delimiter)


State 24

    3 file_structure: $@1 namespace prerequisites global_declarations $@2 header_delimiter . macro_definitions

    $end      reduce using rule 6 (macro_definitions)
    $default  reduce using rule 46 ($@5)

    macro_definitions  go to state 35
    macro_definition   go to state 36
    $@5                go to state 37


State 25

  202 type_name: T_TYPE_IDENTIFIER .
  203          | T_TYPE_IDENTIFIER . array_dimension

    '['  shift, and go to state 38

    $default  reduce using rule 202 (type_name)

    array_dimension  go to state 39


State 26

   36 global_var: scope var_decl .

    $default  reduce using rule 36 (global_var)


State 27

   37 var_decl: type_name . variable_identifier assignment_expression
   38         | type_name . variable_identifier

    T_IDENT   shift, and go to state 31
    T_NUM     shift, and go to state 32
    T_STRING  shift, and go to state 33

    variable_identifier  go to state 40


State 28

   14 global_declarations: global_declarations constants ';' .

    $default  reduce using rule 14 (global_declarations)


State 29

   15 global_declarations: global_declarations global_var ';' .

    $default  reduce using rule 15 (global_declarations)


State 30

   20 constant_list: constant_list ',' . constdef

    $default  reduce using rule 21 ($@3)

    constdef  go to state 41
    $@3       go to state 22


State 31

   26 variable_identifier: T_IDENT .

    $default  reduce using rule 26 (variable_identifier)


State 32

   27 variable_identifier: T_NUM .

    $default  reduce using rule 27 (variable_identifier)


State 33

   28 variable_identifier: T_STRING .

    $default  reduce using rule 28 (variable_identifier)


State 34

   23 constdef: $@3 variable_identifier . T_ASSIGN constant_literal $@4

    T_ASSIGN  shift, and go to state 42


State 35

    3 file_structure: $@1 namespace prerequisites global_declarations $@2 header_delimiter macro_definitions .

    $default  reduce using rule 3 (file_structure)


State 36

    7 macro_definitions: macro_definition . macro_definitions

    $end      reduce using rule 6 (macro_definitions)
    $default  reduce using rule 46 ($@5)

    macro_definitions  go to state 43
    macro_definition   go to state 36
    $@5                go to state 37


State 37

   47 macro_definition: $@5 . macrostart block

    T_STATIC  shift, and go to state 13

    $default  reduce using rule 16 (scope)

    scope       go to state 44
    macro_type  go to state 45
    macrostart  go to state 46


State 38

  204 array_dimension: '[' . ']'
  205                | '[' . T_NUM ']'

    T_NUM  shift, and go to state 47
    ']'    shift, and go to state 48


State 39

  203 type_name: T_TYPE_IDENTIFIER array_dimension .

    $default  reduce using rule 203 (type_name)


State 40

   37 var_decl: type_name variable_identifier . assignment_expression
   38         | type_name variable_identifier .

    T_ASSIGN  shift, and go to state 49

    $default  reduce using rule 38 (var_decl)

    assignment_expression  go to state 50


State 41

   20 constant_list: constant_list ',' constdef .

    $default  reduce using rule 20 (constant_list)


State 42

   23 constdef: $@3 variable_identifier T_ASSIGN . constant_literal $@4

    T_NUM                    shift, and go to state 51
    T_FLOATING_POINT_NUMBER  shift, and go to state 52
    T_STRING                 shift, and go to state 53
    T_CHARACTER              shift, and go to state 54
    T_TRUE                   shift, and go to state 55
    T_FALSE                  shift, and go to state 56

    constant_literal   go to state 57
    boolean_literal    go to state 58
    float_literal      go to state 59
    integer_literal    go to state 60
    character_literal  go to state 61
    simple_literal     go to state 62


State 43

    7 macro_definitions: macro_definition macro_definitions .

    $default  reduce using rule 7 (macro_definitions)


State 44

   33 macro_type: scope . T_VOID
   34           | scope . type_name

    T_VOID             shift, and go to state 63
    T_TYPE_IDENTIFIER  shift, and go to state 25

    type_name  go to state 64


State 45

   35 macrostart: macro_type . macro_declaration '(' parameter_list ')' optional_description

    T_IDENT  shift, and go to state 65
    T_FUNC   shift, and go to state 66

    macro_declaration  go to state 67


State 46

   47 macro_definition: $@5 macrostart . block

    '{'  shift, and go to state 68

    block  go to state 69


State 47

  205 array_dimension: '[' T_NUM . ']'

    ']'  shift, and go to state 70


State 48

  204 array_dimension: '[' ']' .

    $default  reduce using rule 204 (array_dimension)


State 49

   76 assignment_expression: T_ASSIGN . simple_expression

    error                    shift, and go to state 71
    T_IDENT                  shift, and go to state 72
    T_NUM                    shift, and go to state 51
    T_FLOATING_POINT_NUMBER  shift, and go to state 52
    T_STRING                 shift, and go to state 73
    T_CHARACTER              shift, and go to state 54
    T_TRUE                   shift, and go to state 55
    T_FALSE                  shift, and go to state 56
    T_FUNC                   shift, and go to state 74
    T_VARIABLE               shift, and go to state 75
    '~'                      shift, and go to state 76
    '+'                      shift, and go to state 77
    '-'                      shift, and go to state 78
    '*'                      shift, and go to state 79
    '['                      shift, and go to state 80
    '!'                      shift, and go to state 81
    '('                      shift, and go to state 82
    '{'                      shift, and go to state 83

    error              [reduce using rule 81 (range_expression)]
    T_FOR              reduce using rule 81 (range_expression)
    T_TYPE_IDENTIFIER  reduce using rule 81 (range_expression)
    T_IDENT            [reduce using rule 81 (range_expression)]
    T_FUNC             [reduce using rule 81 (range_expression)]
    T_DOTDOT           reduce using rule 81 (range_expression)
    T_IF               reduce using rule 81 (range_expression)
    T_ELSE             reduce using rule 81 (range_expression)
    T_WHILE            reduce using rule 81 (range_expression)
    T_GOTO             reduce using rule 81 (range_expression)
    T_SWITCH           reduce using rule 81 (range_expression)
    T_CASE             reduce using rule 81 (range_expression)
    T_DEFAULT          reduce using rule 81 (range_expression)
    T_BREAK            reduce using rule 81 (range_expression)
    T_CONTINUE         reduce using rule 81 (range_expression)
    T_RETURN           reduce using rule 81 (range_expression)
    T_VARIABLE         [reduce using rule 81 (range_expression)]
    T_NMATCH           reduce using rule 81 (range_expression)
    T_NE               reduce using rule 81 (range_expression)
    T_EQ               reduce using rule 81 (range_expression)
    T_SHIFT_LEFT       reduce using rule 81 (range_expression)
    T_SHIFT_RIGHT      reduce using rule 81 (range_expression)
    T_OR               reduce using rule 81 (range_expression)
    T_AND              reduce using rule 81 (range_expression)
    T_LE               reduce using rule 81 (range_expression)
    T_GE               reduce using rule 81 (range_expression)
    T_POWER_TO         reduce using rule 81 (range_expression)
    '&'                reduce using rule 81 (range_expression)
    '|'                reduce using rule 81 (range_expression)
    '^'                reduce using rule 81 (range_expression)
    '~'                [reduce using rule 81 (range_expression)]
    '<'                reduce using rule 81 (range_expression)
    '>'                reduce using rule 81 (range_expression)
    '+'                [reduce using rule 81 (range_expression)]
    '-'                [reduce using rule 81 (range_expression)]
    '*'                [reduce using rule 81 (range_expression)]
    '/'                reduce using rule 81 (range_expression)
    '%'                reduce using rule 81 (range_expression)
    '['                [reduce using rule 81 (range_expression)]
    ';'                reduce using rule 81 (range_expression)
    ','                reduce using rule 81 (range_expression)
    ')'                reduce using rule 81 (range_expression)
    '{'                [reduce using rule 81 (range_expression)]
    ']'                reduce using rule 81 (range_expression)
    '}'                reduce using rule 81 (range_expression)

    variable_reference      go to state 84
    simple_expression       go to state 85
    range_expression        go to state 86
    s_bterm                 go to state 87
    binary_expression       go to state 88
    value                   go to state 89
    map_literal             go to state 90
    array_literal           go to state 91
    string                  go to state 92
    call_expression         go to state 93
    function_id_or_pointer  go to state 94
    type_cast               go to state 95
    boolean_literal         go to state 58
    float_literal           go to state 59
    integer_literal         go to state 60
    character_literal       go to state 61
    simple_literal          go to state 96


State 50

   37 var_decl: type_name variable_identifier assignment_expression .

    $default  reduce using rule 37 (var_decl)


State 51

  209 integer_literal: T_NUM .

    $default  reduce using rule 209 (integer_literal)


State 52

  208 float_literal: T_FLOATING_POINT_NUMBER .

    $default  reduce using rule 208 (float_literal)


State 53

   25 constant_literal: T_STRING .

    $default  reduce using rule 25 (constant_literal)


State 54

  210 character_literal: T_CHARACTER .

    $default  reduce using rule 210 (character_literal)


State 55

  206 boolean_literal: T_TRUE .

    $default  reduce using rule 206 (boolean_literal)


State 56

  207 boolean_literal: T_FALSE .

    $default  reduce using rule 207 (boolean_literal)


State 57

   23 constdef: $@3 variable_identifier T_ASSIGN constant_literal . $@4

    $default  reduce using rule 22 ($@4)

    $@4  go to state 97


State 58

  214 simple_literal: boolean_literal .

    $default  reduce using rule 214 (simple_literal)


State 59

  212 simple_literal: float_literal .

    $default  reduce using rule 212 (simple_literal)


State 60

  211 simple_literal: integer_literal .

    $default  reduce using rule 211 (simple_literal)


State 61

  213 simple_literal: character_literal .

    $default  reduce using rule 213 (simple_literal)


State 62

   24 constant_literal: simple_literal .

    $default  reduce using rule 24 (constant_literal)


State 63

   33 macro_type: scope T_VOID .

    $default  reduce using rule 33 (macro_type)


State 64

   34 macro_type: scope type_name .

    $default  reduce using rule 34 (macro_type)


State 65

   31 macro_declaration: T_IDENT .

    $default  reduce using rule 31 (macro_declaration)


State 66

   32 macro_declaration: T_FUNC .

    $default  reduce using rule 32 (macro_declaration)


State 67

   35 macrostart: macro_type macro_declaration . '(' parameter_list ')' optional_description

    '('  shift, and go to state 98


State 68

   48 block: '{' . var_decls stmntlist closing_brace

    $default  reduce using rule 49 (var_decls)

    var_decls  go to state 99


State 69

   47 macro_definition: $@5 macrostart block .

    $default  reduce using rule 47 (macro_definition)


State 70

  205 array_dimension: '[' T_NUM ']' .

    $default  reduce using rule 205 (array_dimension)


State 71

  195 function_id_or_pointer: error .

    $default  reduce using rule 195 (function_id_or_pointer)


State 72

   30 variable_reference: T_IDENT .
  128 value: T_IDENT .
  194 function_id_or_pointer: T_IDENT .

    T_ASSIGN  reduce using rule 30 (variable_reference)
    '('       reduce using rule 194 (function_id_or_pointer)
    $default  reduce using rule 128 (value)


State 73

  147 string: T_STRING .

    $default  reduce using rule 147 (string)


State 74

  190 call_expression: T_FUNC . '(' @21 parameter_list closing_paren

    '('  shift, and go to state 100


State 75

   29 variable_reference: T_VARIABLE .
  123 value: T_VARIABLE .

    T_ASSIGN  reduce using rule 29 (variable_reference)
    $default  reduce using rule 123 (value)


State 76

   95 binary_expression: '~' . binary_expression

    error                    shift, and go to state 71
    T_IDENT                  shift, and go to state 72
    T_NUM                    shift, and go to state 51
    T_FLOATING_POINT_NUMBER  shift, and go to state 52
    T_STRING                 shift, and go to state 73
    T_CHARACTER              shift, and go to state 54
    T_TRUE                   shift, and go to state 55
    T_FALSE                  shift, and go to state 56
    T_FUNC                   shift, and go to state 74
    T_VARIABLE               shift, and go to state 75
    '~'                      shift, and go to state 76
    '+'                      shift, and go to state 77
    '-'                      shift, and go to state 78
    '*'                      shift, and go to state 79
    '['                      shift, and go to state 80
    '!'                      shift, and go to state 81
    '('                      shift, and go to state 82
    '{'                      shift, and go to state 83

    variable_reference      go to state 84
    s_bterm                 go to state 87
    binary_expression       go to state 101
    value                   go to state 89
    map_literal             go to state 90
    array_literal           go to state 91
    string                  go to state 92
    call_expression         go to state 93
    function_id_or_pointer  go to state 94
    type_cast               go to state 95
    boolean_literal         go to state 58
    float_literal           go to state 59
    integer_literal         go to state 60
    character_literal       go to state 61
    simple_literal          go to state 96


State 77

   96 binary_expression: '+' . binary_expression

    error                    shift, and go to state 71
    T_IDENT                  shift, and go to state 72
    T_NUM                    shift, and go to state 51
    T_FLOATING_POINT_NUMBER  shift, and go to state 52
    T_STRING                 shift, and go to state 73
    T_CHARACTER              shift, and go to state 54
    T_TRUE                   shift, and go to state 55
    T_FALSE                  shift, and go to state 56
    T_FUNC                   shift, and go to state 74
    T_VARIABLE               shift, and go to state 75
    '~'                      shift, and go to state 76
    '+'                      shift, and go to state 77
    '-'                      shift, and go to state 78
    '*'                      shift, and go to state 79
    '['                      shift, and go to state 80
    '!'                      shift, and go to state 81
    '('                      shift, and go to state 82
    '{'                      shift, and go to state 83
